test_suite5/ALAN/test_suite/alan-2022-examples/failing/002300_mutation.alan
source ja begin get _ call iMi() end
